@@ -1,3 +1,8 @@
+Thu May 15 10:30:55 2003  Nicola Pero  <n.pero@mi.flashnet.it>
+
+	* GNUmakefile.in (generated-files): Added fixpath.sh.
+	(fixpath.sh): New rule.
+	
 Wed May 14 16:19:02 2003  Nicola Pero  <n.pero@mi.flashnet.it>
 
 	* transform_paths.sh: Quote paths.
